@@ -13,6 +13,7 @@
     <thirdpartyegg name="lxml" minversion="3.3" maxversion="3.3.999"/>
     <thirdpartyegg name="WebTest" minversion="2.0" maxversion="2.0.999"/>
     <thirdpartyegg name="selenium" minversion="2.42" maxversion="2.42.999"/>
+    <thirdpartyegg name="watchdog" minversion="0.83" maxversion="0.83.999"/>
   </deps>
 
   <deps purpose="build">
